<resources>
  <string name="app_name">ManagePatients</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Savics</string>
  <string name="nav_header_subtitle">support@savics.org</string>
  <string name="nav_header_desc">Navigation header</string>

  <string name="menu_home">Home</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>

  <string name="action_reset">Reset</string>
  <string name="communicate">Communicate</string>
  <string name="full_name">Full name</string>
  <string name="gender">Gender</string>
  <string name="male">Male</string>
  <string name="other">Other</string>
  <string name="female">Female</string>
  <string name="add_new_patient">Add a new patient</string>
  <string name="email">Email</string>
  <string name="age">Age</string>
  <string name="error_empty_name">Please enter full name!</string>
  <string name="error_empty_age">Please enter age!</string>
  <string name="error_select_gender">Please select gender!</string>
  <string name="error_empty_email">Please enter email!</string>
  <string name="save">Save</string>
  <string name="current_username">Current username</string>
  <string name="current_number_of_added_patients">Current number of added patients</string>
  <string name="max_number_of_patients_allowed">Max number of patients allowed</string>
  <string name="hi_again_username_">Hi again %1$s</string>
  <string name="error_empty_username">Please enter username!</string>
  <string name="error_empty_max_number_of_patients">Please enter max number of patients allowed!</string>
  <string name="error_you_have_reach_max_number_of_patients_allowed">You have reached the max number of patients allowed!</string>
  <string name="share_subject">Share my results :)</string>
  <string name="share_your_results_with_your_friends">Share your results with your friends</string>
  <string name="share_you_result">Hello guys, I want to share my results:\nI have %1$s current patients and my max patients are %2$s :)</string>


</resources>